--- a/y2024/CrescendoDashboard/dashboard.yml
+++ b/y2024/CrescendoDashboard/dashboard.yml
@@ -11,34 +11,60 @@ widgets:
     table_name: SUPER_STRUCTURE
     entries:
     - type: double
-      name: fieldName
-      dasboard_constant: FIELD_NAME
+      name: pivotMotorAngle
+      dasboard_constant: PIVOT_MOTOR_ANGLE
       sim_incr: '2'
+    - type: double
+      name: goalAngle
+      dasboard_constant: GOAL_ANGLE
+      sim_incr: '2'
+    - type: double
+      name: shooterMotorPercentage
+      dasboard_constant: SHOOTER_MOTOR_PERCENTAGE
+    - type: double
+      name: pivotMotorPercentage
+      dasboard_constant: PIVOT_MOTOR_PERCENTAGE
+    - type: boolean
+      name: hasGamePiece
+      dasboard_constant: HAS_GAME_PIECE
   shapes:
   - type: Rectangle
-    name: rectangle
-    x: '50'
-    y: '50'
+    name: Chassis
+    x: '3'
+    y: '9'
     color: ''
-    height: '40'
-    width: '10'
+    height: '2'
+    width: '8'
   - type: Circle
-    name: corcle
-    x: '40'
-    y: '40'
+    name: pivotMotor
+    x: '3.5'
+    y: '9'
     color: ''
-    radius: '20'
+    radius: '1'
   - type: Rectangle
-    name: rectttt
-    x: '10'
-    y: '10'
+    name: ArmRect
+    x: '3'
+    y: '3'
     color: ''
-    height: '35.04'
-    width: '20'
-  - type: Circle
-    name: cciirrccllee
-    x: '12'
-    y: '17'
+    height: '6'
+    width: '1'
+  - type: Rectangle
+    name: shooterRect
+    x: '2'
+    y: '2'
     color: blue
-    radius: '8'
+    height: '1'
+    width: '6'
+  - type: Circle
+    name: shooterMotor
+    x: '1.75'
+    y: '2.5'
+    color: ''
+    radius: '0.5'
+  - type: Circle
+    name: IntakeMotor
+    x: '8.25'
+    y: '2.5'
+    color: ''
+    radius: '0.5'
 manual_widgets: []
