tested test paths

--- a/y2024/Crescendo/.pathplanner/settings.json
+++ b/y2024/Crescendo/.pathplanner/settings.json
@@ -4,6 +4,7 @@
   "holonomicMode": true,
   "pathFolders": [
     "Four Piece Speaker",
+    "Test Paths",
     "Two notes speaker opp side"
   ],
   "autoFolders": [],
