--- a/settings.gradle
+++ b/settings.gradle
@@ -46,7 +46,7 @@ include 'libraries:GirlsOfSteelLibPhoenix6'
 //include 'old_robots:y2021:OutreachBot'
 //include 'old_robots:y2021:OutreachBotDashboard'
 
-//include 'old_robots:y2022:ChassisProject'
+include 'old_robots:y2022:ChassisProject'
 //include 'old_robots:y2022:MEPI'
 //include 'old_robots:y2022:RapidReact'
 //include 'old_robots:y2022:RapidReactDashboard'
