completed and simulated 5 note auto and moved named commands from roboCont to Auto class

--- a/y2024/Crescendo/.pathplanner/settings.json
+++ b/y2024/Crescendo/.pathplanner/settings.json
@@ -4,6 +4,7 @@
   "holonomicMode": true,
   "pathFolders": [
     "Four Piece Speaker",
+    "Five Note Speaker",
     "Test Paths",
     "Two notes speaker opp side"
   ],
