--- a/y2024/CrescendoWebDashboard/Plugin/package.json
+++ b/y2024/CrescendoWebDashboard/Plugin/package.json
@@ -23,13 +23,25 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint src/**/*",
+    "lint:format": "eslint src/**/* --fix"
   },
   "dependencies": {
-    "lit": "^2.7.6",
-    "@frc-web-components/app": "^0.2.0"
+    "@frc-web-components/app": "^0.2.0",
+    "lit": "^2.7.6"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.3.1",
+    "@typescript-eslint/parser": "^5.3.1",
+    "eslint": "^7.27.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jest-dom": "^3.9.2",
+    "eslint-plugin-monorepo": "^0.3.2",
+    "eslint-plugin-storybook": "^0.6.15",
+    "eslint-plugin-testing-library": "^5.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-dts": "^3.7.0"
