--- a/y2024/Crescendo/.pathplanner/settings.json
+++ b/y2024/Crescendo/.pathplanner/settings.json
@@ -12,7 +12,9 @@
     "Two Note Speaker Middle 6",
     "Two notes speaker opp side"
   ],
-  "autoFolders": [],
+  "autoFolders": [
+    "TwoPiece"
+  ],
   "defaultMaxVel": 3.0,
   "defaultMaxAccel": 3.0,
   "defaultMaxAngVel": 540.0,
