commented paths out

--- a/y2024/Crescendo/.pathplanner/settings.json
+++ b/y2024/Crescendo/.pathplanner/settings.json
@@ -4,11 +4,11 @@
   "holonomicMode": true,
   "pathFolders": [
     "Four Piece Speaker",
-    "TwoNoteSpeakerMiddle0",
-    "Test Paths",
+    "All TwoNoteSpeakerAutos",
     "Two notes speaker opp side",
     "TwoNoteSpeakerLeft3",
     "TwoNoteSpeakerLeft4",
+    "TwoNoteSpeakerMiddle0",
     "TwoNoteSpeakerMiddle1",
     "TwoNoteSpeakerMiddle2",
     "TwoNoteSpeakerMiddle5",
