Changed some code with straight path and 65

--- a/y2024/Crescendo/.pathplanner/settings.json
+++ b/y2024/Crescendo/.pathplanner/settings.json
@@ -6,9 +6,10 @@
     "TestPaths"
   ],
   "autoFolders": [
-    "TwoNote",
+    "FourNote",
+    "Test Paths",
     "ThreeNote",
-    "FourNote"
+    "TwoNote"
   ],
   "defaultMaxVel": 3.0,
   "defaultMaxAccel": 3.0,
