--- a/y2024/Crescendo/build.gradle
+++ b/y2024/Crescendo/build.gradle
@@ -83,6 +83,7 @@ test {
 
 // Simulation configuration (e.g. environment variables).
 wpi.sim.addGui().defaultEnabled = true
+//wpi.sim.addDriverstation()
 wpi.sim.addDriverstation().defaultEnabled = true
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
