--- a/y2023/ChargedUp/build.gradle
+++ b/y2023/ChargedUp/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     implementation project(":libraries:GirlsOfSteelLib")
     implementation project(":libraries:GirlsOfSteelLibRev")
     implementation project(":libraries:GirlsOfSteelLibPhoenix6")
+    implementation project(":libraries:GirlsOfSteelLibPathing")
 }
 
 test {
