--- a/y2024/Crescendo/build.gradle
+++ b/y2024/Crescendo/build.gradle
@@ -74,6 +74,8 @@ dependencies {
     implementation project(":libraries:GirlsOfSteelLib")
     implementation project(":libraries:GirlsOfSteelLibRev")
     implementation project(":libraries:GirlsOfSteelLibPhoenix6")
+    implementation project(":libraries:GirlsOfSteelLibPathing")
+    implementation project(":libraries:GirlsOfSteelLibPhotonVision")
 }
 
 test {
