--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -15,15 +15,16 @@ jobs:
     runs-on: ${{ matrix.platform }}
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v4
 
     - name: Set up Java
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v4
       with:
-        java-version: 1.17
+        distribution: 'temurin'
+        java-version: 17
 
     - name: Get current time
-      uses: josStorer/get-current-time@v2.0.1
+      uses: josStorer/get-current-time@v2
       id: current-time
       with:
         format: YYYY.MM.DD-HH
@@ -44,7 +45,7 @@ jobs:
 
 
     - name: Publish Artifacts
-      uses: actions/upload-artifact@v1
+      uses: actions/upload-artifact@v4
       with:
         name: Maven Artifacts - ${{ matrix.platform }}
         path: build/maven_output
