--- a/.github/workflows/update_checker.yml
+++ b/.github/workflows/update_checker.yml
@@ -11,12 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Set up Java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v4
         with:
-          java-version: 1.11
+          distribution: 'temurin'
+          java-version: 17
 
       - name: Setup git
         run: |
