--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,8 @@ include 'libraries:GirlsOfSteelLib'
 include 'libraries:GirlsOfSteelLibRev'
 include 'libraries:GirlsOfSteelLibPhoenix5'
 include 'libraries:GirlsOfSteelLibPhoenix6'
+include 'libraries:GirlsOfSteelLibPhotonVision'
+include 'libraries:GirlsOfSteelLibPathing'
 //include 'libraries:SwerveShuffleboard'
 
 //include 'evergreen_robots:ChassisProject'
