--- a/libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/led/BUILD.bazel
+++ b/libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/led/BUILD.bazel
@@ -5,6 +5,7 @@ gos_java_library(
     srcs = glob(["*.java"]),
     visibility = ["//visibility:public"],
     deps = [
+        "//libraries/GirlsOfSteelLib/src/main/java/org/littletonrobotics/frc2023/util:mechanical_advantage",
         "@bzlmodrio-allwpilib//libraries/java/wpilibj",
     ],
 )
