--- a/libraries/GirlsOfSteelLibPathing/src/main/java/com/gos/lib/pathing/BUILD.bazel
+++ b/libraries/GirlsOfSteelLibPathing/src/main/java/com/gos/lib/pathing/BUILD.bazel
@@ -1,11 +1,12 @@
 load("//build_scripts/bazel:java_rules.bzl", "gos_java_library")
 
 gos_java_library(
-    name = "led",
+    name = "pathing",
     srcs = glob(["*.java"]),
     visibility = ["//visibility:public"],
     deps = [
-        "//libraries/GirlsOfSteelLib/src/main/java/org/littletonrobotics/frc2023/util:mechanical_advantage",
+        "@bzlmodrio-allwpilib//libraries/java/wpilibNewCommands",
         "@bzlmodrio-allwpilib//libraries/java/wpilibj",
+        "@bzlmodrio-pathplannerlib//libraries/java/pathplannerlib-java",
     ],
 )
