Improve sysid and make rev swerve builder

--- a/evergreen_robots/SwerveChassis/src/main/java/com/gos/swerve2023/BUILD.bazel
+++ b/evergreen_robots/SwerveChassis/src/main/java/com/gos/swerve2023/BUILD.bazel
@@ -9,6 +9,8 @@ gos_java_robot(
         "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib",
         "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/properties",
         "//libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev/swerve",
+        "//libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev/swerve/config",
+        "//libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev",
         "@bzlmodrio-allwpilib//libraries/java/hal",
         "@bzlmodrio-allwpilib//libraries/java/wpilibNewCommands",
         "@bzlmodrio-allwpilib//libraries/java/wpilibj",
