--- a/libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev/swerve/BUILD.bazel
+++ b/libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev/swerve/BUILD.bazel
@@ -10,9 +10,11 @@ gos_java_library(
         "//libraries/GirlsOfSteelLib/src/main/java/com/gos/lib/swerve",
         "//libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev/alerts",
         "//libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev/properties/pid",
+        "//libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev/swerve/config",
         "@bzlmodrio-allwpilib//libraries/java/ntcore",
         "@bzlmodrio-allwpilib//libraries/java/wpilibj",
         "@bzlmodrio-allwpilib//libraries/java/wpimath",
+        "@bzlmodrio-allwpilib//libraries/java/wpiunits",
         "@bzlmodrio-revlib//libraries/java/revlib-java",
         "@maven//:org_snobotv2_snobot_sim_java_base",
         "@maven//:org_snobotv2_snobot_sim_java_revlib",
