--- a/old_robots/y2023/ChargedUp/src/main/java/com/gos/chargedup/BUILD.bazel
+++ b/old_robots/y2023/ChargedUp/src/main/java/com/gos/chargedup/BUILD.bazel
@@ -22,6 +22,7 @@ gos_java_robot(
         "//libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev/checklists",
         "//libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev/properties/pid",
         "//libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev/swerve",
+        "//libraries/GirlsOfSteelLibRev/src/main/java/com/gos/lib/rev/swerve/config",
         "//old_robots/y2023/ChargedUp/src/main/java/org/littletonrobotics/frc2023:mechanical_advantage",
         "@bzlmodrio-allwpilib//libraries/java/apriltag",
         "@bzlmodrio-allwpilib//libraries/java/hal",
@@ -34,7 +35,7 @@ gos_java_robot(
         "@bzlmodrio-pathplannerlib//libraries/java/pathplannerlib-java",
         "@bzlmodrio-phoenix6//libraries/java/wpiapi-java",
         "@bzlmodrio-photonlib//libraries/java/photonlib-java",
-        "@bzlmodrio-revlib//libraries/java/revlib-java",
+g        "@bzlmodrio-revlib//libraries/java/revlib-java",
         "@maven//:org_snobotv2_snobot_sim_java_base",
         "@maven//:org_snobotv2_snobot_sim_java_phoenix6",
         "@maven//:org_snobotv2_snobot_sim_java_revlib",
