--- a/old_robots/y2023/ChargedUp/src/main/java/com/gos/chargedup/BUILD.bazel
+++ b/old_robots/y2023/ChargedUp/src/main/java/com/gos/chargedup/BUILD.bazel
@@ -35,7 +35,7 @@ gos_java_robot(
         "@bzlmodrio-pathplannerlib//libraries/java/pathplannerlib-java",
         "@bzlmodrio-phoenix6//libraries/java/wpiapi-java",
         "@bzlmodrio-photonlib//libraries/java/photonlib-java",
-g        "@bzlmodrio-revlib//libraries/java/revlib-java",
+        "@bzlmodrio-revlib//libraries/java/revlib-java",
         "@maven//:org_snobotv2_snobot_sim_java_base",
         "@maven//:org_snobotv2_snobot_sim_java_phoenix6",
         "@maven//:org_snobotv2_snobot_sim_java_revlib",
