--- a/settings.gradle
+++ b/settings.gradle
@@ -21,4 +21,5 @@ include 'libraries:GirlsOfSteelLibPathing'
 
 include 'y2024:Crescendo'
 include 'y2024:CrescendoDashboard'
+include 'y2025:Reefscape'
 
